Fix create post form on mobile

--- a/src/styles/containers/CreatePost.scss
+++ b/src/styles/containers/CreatePost.scss
@@ -1,3 +1,7 @@
+.create-post__wrapper {
+	margin: 25px;
+}
+
 .create-post-btn__wrapper {
 	display: flex;
 	justify-content: center;
